upgrade to Angular 12.2.1

--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "ng-scss-variables"
+  "defaultProject": "ng-scss-variables",
+  "cli": {
+    "analytics": false
+  }
 }
